# DocxProcessor

./: .flake8  .gitignore  CustomFormatter.py  LICENSE  README.md  config.py  logger.py  main.py  pyproject.toml  run_docxp.ps1  run_docxp.sh  word_docx_morph.ini
.github/workflows/: python-package.yml
src/docx_processor/: __init__.py  __main__.py  cli.py  config.py  config.yml  logger.py  version.py
src/docx_processor/config/: __init__.py  app_config.py  constants.py
src/docx_processor/logger/: __init__.py  context.py  custom_formatter.py  docx.py
src/docx_processor/processors/: __init__.py  batch.py  document.py  docx_indexer.py
src/docx_processor/utils/: __init__.py  url.py
tests/: RESULT-Test-Doc_ver2.docx  test_docx_indexer.py  test_docx_processor.py  wordDocMoc.py
tests/data/: MocWordDoc.docx  Test-Doc_ver3.docx
tests/mocs/: MocWordDoc.docx  wordDocMoc.py
