[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx-processor"
dynamic = ["version"]
description = "A tool for processing and modifying Word DOCX files"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Sean Smith", email = "sean.smith@comapps.net" }
]
urls = {repository = "https://github.com/Commercial-Applications/DocxProcessor"}

dependencies = [
    "python-docx>=0.8.11",
    "lxml>=4.9.0",
    "pathlib>=1.0.1",
    "click>=8.2.0",
    "pyYAML>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "faker"
]

[tool.hatch.version]
path = "src/docx_processor/version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ['E203']

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'

[project.scripts]
docx-processor = "docx_processor.cli:main"

